--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "license": "ISC",
   "author": "ms",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "npm run dev"
+    "dev": "nodemon index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
